# gtsam_simulator

./: .gitignore  CMakeLists.txt  Doxyfile
examples/: IMUExample.cpp  IMUExampleFigureEightDeadReckoning.cpp  IMUExampleHelix.cpp  IMUExampleHelixDeadReckoning.cpp  IMUExampleStraightLine.cpp  IMUExampleStraightLineDeadReckoning.cpp
include/gtsam/simulation/: IMUErrorModel.h  IMUScenarioSimulator.h  ScenarioSimulator.h
src/: IMUErrorModel.cpp  IMUScenarioSimulator.cpp  main.cpp  test_gtsam.cpp
test/: TestIMUErrorModel.cpp  TestIMUScenarioSimulator.cpp
